--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="app">
-        <h1>Do you know internet Quiz</h1>
+        <h1>Test Your Knowledge!</h1>
         <div class="Quiz">
             <h2 id="question">Question goes here</h2>
             <div id="answer-buttons">
